@@ -231,6 +231,8 @@
 
 <!ENTITY url-slug-firmware "http://www.slug-firmware.net/">
 
+<!ENTITY url-arm-cyrius-dns323 "http://www.cyrius.com/debian/orion/d-link/dns-323">
+
 <!ENTITY url-arm-cyrius-glantank "http://www.cyrius.com/debian/iop/glantank/">
 
 <!ENTITY url-arm-cyrius-n2100 "http://www.cyrius.com/debian/iop/n2100/">
