@@ -62,12 +62,12 @@ url="&url-arm-cyrius-nslu2;">installation instructions</ulink>.
 
 Kirkwood is a system on a chip (SoC) from Marvell that integrates an ARM
 CPU, Ethernet, SATA, USB, and other functionality in one chip.  We
-currently support the following Kirkwood based devices: OpenRD (OpenRD-Base
-and OpenRD-Client), <ulink
+currently support the following Kirkwood based devices: OpenRD (OpenRD-Base,
+OpenRD-Client and OpenRD-Ultimate), <ulink
 url="&url-arm-cyrius-sheevaplug;">SheevaPlug</ulink> and <ulink
 url="&url-arm-cyrius-qnap-kirkwood;">QNAP Turbo Station</ulink> (TS-110,
-TS-119, TS-210, TS-219 and TS-219P; the TS-410 and TS-419P are not yet
-supported).
+TS-112, TS-119, TS-119P+, TS-210, TS-212, TS-219, TS-219P, TS-219P+,
+TS-410, TS-410U, TS-419P, TS-419P+ and TS-419U).
 
 </para></listitem>
 </varlistentry>
@@ -81,6 +81,7 @@ Ethernet, SATA, USB, and other functionality in one chip. There are many
 Network Attached Storage (NAS) devices on the market that are based on an
 Orion chip. We currently support the following Orion based devices: <ulink
 url="&url-arm-cyrius-kuroboxpro;">Buffalo Kurobox</ulink>, <ulink
+url="&url-arm-cyrius-dns323;">D-Link DNS-323</ulink>, <ulink
 url="&url-arm-cyrius-mv2120;">HP mv2120</ulink>, <ulink
 url="&url-arm-cyrius-qnap;">QNAP Turbo Station</ulink> (TS-109, TS-209 and
 TS-409).
