@@ -23,6 +23,9 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Document preseed-md5 and keymap preseed aliases
     Closes: #621825, #621824
 
+  [ Martin Michlmayr ]
+  * Update list of supported ARM devices.
+
  -- Samuel Thibault <sthibault@debian.org>  Sun, 20 Feb 2011 21:47:31 +0100
 
 installation-guide (20110122) unstable; urgency=low
